# forest

./: Cargo.toml  README.md
.github/workflows/: build.yml  tests.yml
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/model/: mod.rs  private.rs  public.rs  util.rs
src/api/requests/: mod.rs  private.rs  public.rs  util.rs
src/config/: forest_config.rs  mod.rs
src/model/: mod.rs  private.rs  public.rs  util.rs
src/ui/: forest.rs  mod.rs  util.rs
src/ui/themes/: dark.rs  mod.rs  style.rs
