[package]
name = "forest"
version = "0.1.0"
authors = ["Proudmuslim <proudmuslim@protonmail.com>"]
description = """
Custom frontend for the tradeogre.com exchange, written using Iced.
"""
edition = "2018"

[dependencies]
linked-hash-map = { version = "0.5.4", features = ["serde_impl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11.4"
confy = "0.4.0"
dirs = "3.0.2"
iced = "0.3.0"

[dependencies.serde_with]
version = "1.10.0"
features = [ "json", "macros" ]
