[package]
name = "forest"
version = "0.1.0"
authors = ["Proudmuslim <proudmuslim-dev@protonmail.com>"]
description = """
Custom frontend for the tradeogre.com exchange, written using Iced.
"""
edition = "2018"

[dependencies]
iced_aw = { git = "https://github.com/iced-rs/iced_aw", branch = "main", default-features = false, features = ["card", "modal"] }
linked-hash-map = { version = "0.5.4", features = ["serde_impl"] }
iced = { version = "0.3.0", features = ["debug", "tokio", "svg"] }
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4.0"
serde_json = "1.0"
confy = "0.4.0"
dirs = "3.0.2"

[dependencies.reqwest]
version = "0.11.4"
features = ["json"]

[dependencies.serde_with]
version = "1.10.0"
features = ["json", "macros"]
